# CI2024_lab3

./: README.md  lab3.ipynb  lab3_n_puzzle.ipynb  pyproject.toml  shortest-path.ipynb  shortest-path3F.ipynb
