[tool.poetry]
name = "ci2024-lab2"
version = "0.1.0"
description = ""
authors = ["Luo <s328249@polito.studenti.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
geopy = "^2.4.1"
networkx = "^3.4.2"
icecream = "^2.1.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
